--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -3,3 +3,6 @@ steps:
   args: ['build', '-t', 'europe-north1-docker.pkg.dev/$tomastestproject-433206/test/my-image', '.']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push','europe-north1-docker.pkg.dev/$tomastestproject-433206/test/my-image', '.']
+
+options:
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
