--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -1,9 +1,11 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'europe-west1-docker.pkg.dev/$tomastestproject-433206/test/my-image', '.']
-# - name: 'gcr.io/cloud-builders/docker'
-#   args: ['push','europe-west1-docker.pkg.dev/$tomastestproject-433206/test/my-image', '.']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push','europe-west1-docker.pkg.dev/$tomastestproject-433206/test/my-image', '.']
 
 options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
   logging: CLOUD_LOGGING_ONLY
+  machineType: "E2_HIGHCPU_8"
+  region: "europe-west1"
