--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -8,4 +8,4 @@ options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
   logging: CLOUD_LOGGING_ONLY
   machineType: "E2_HIGHCPU_8"
-  region: "europe-west1"
+  #region: "europe-west1"
