--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -1,6 +1,8 @@
 steps:
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['run', 'ls', '/workspace']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image', '-f', 'Dockerfile', '.']
+  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image', '-f', 'app/Dockerfile', '.']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image']
 
