--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -1,6 +1,7 @@
 steps:
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'ls', '/workspace']
+- name: 'alpine'
+  entrypoint: 'sh'
+  args: ['-c', 'ls -l /workspace']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image', '-f', 'app/Dockerfile', '.']
 - name: 'gcr.io/cloud-builders/docker'
