--- a/app/cloudbuild.yaml
+++ b/app/cloudbuild.yaml
@@ -1,9 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image', '-f', 'app/Dockerfile', '.']
-- name: 'alpine'
-  entrypoint: 'sh'
-  args: ['-c', 'ls -l /workspace']
+  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image', '-f', 'app/Dockerfile', 'app']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image']
 
