--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,3 +21,7 @@ steps:
          '--platform', 'managed',
          '--region', 'europe-west1',
          '--allow-unauthenticated']
+
+options:
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+  logging: CLOUD_LOGGING_ONLY
