--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,22 +2,28 @@
 # - name: 'gcr.io/cloud-builders/docker'
 #   args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image', '.']
 # - name: 'gcr.io/cloud-builders/docker'
-#   #args: ['push','europe-north1-docker.pkg.dev/tomastestproject-433206/test/my-image']
 #   args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image']
+# - name: 'gcr.io/cloud-builders/gcloud'
+#   args: ['run', 'deploy', 'my-flask-app',
+#          '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image',
+#          '--platform', 'managed',
+#          '--region', 'europe-west1',
+#          '--allow-unauthenticated']
 
 # options:
 #   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
 #   logging: CLOUD_LOGGING_ONLY
 
 
+
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image', '.']
+  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image', '-f', 'app/Dockerfile', 'app']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image']
+  args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image2']
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['run', 'deploy', 'my-flask-app',
-         '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image',
+         '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/test2/my-image2',
          '--platform', 'managed',
          '--region', 'europe-west1',
          '--allow-unauthenticated']
