--- a/app_2/cloudbuild.yaml
+++ b/app_2/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
          '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/app2/app2-image',
          '--platform', 'managed',
          '--region', 'europe-west1',
-         '--allow-unauthenticated'
+         '--allow-unauthenticated',
           '--port', '5050']
 
 options:
