--- a/fetch-news-app/cloudbuild.yaml
+++ b/fetch-news-app/cloudbuild.yaml
@@ -26,3 +26,7 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/fetch-news-app/fetch_news_img', '-f', 'fetch_news_app/Dockerfile', 'fetch_news_app']
+
+options:  
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+  logging: CLOUD_LOGGING_ONLY
