--- a/news/cloudbuild.yaml
+++ b/news/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/fetch-news/asd', '-f', 'Dockerfile', '.']
+  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/fetch-news/asd', '-f', 'news/Dockerfile', 'news']
   #Adressen kommer ifrån ditt Artifact Repo. "app_3-image" är namnet på imagen. 
   #'app_3/Dockerfile' anger vart i repot dockerfilen finns. 'app_3' anger från vilken mapp dockerfilen "läser" ifrån.
 - name: 'gcr.io/cloud-builders/docker'        
