--- a/get_data_bq/.env
+++ b/get_data_bq/.env
@@ -1,5 +1,5 @@
 NEWS_API_KEY=f43cc14666d14a8fab13a6daced8f7d4
-GCP_AUTH={
+GOOGLE_APPLICATION_CREDENTIALS={
   "type": "service_account",
   "project_id": "tomastestproject-433206",
   "private_key_id": "adc5bc0909768f44faf8ba3d3bb7ac04ac06b31e",
