--- a/get_data_bq/cloudbuild.yaml
+++ b/get_data_bq/cloudbuild.yaml
@@ -1,12 +1,12 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/sentiment-analysis/img-4', '-f', 'get_data_bq/Dockerfile', 'get_data_bq']
+  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/sentiment-analysis/img-4', '-f', '/get_data_bq/dockerfile', 'get_data_bq']
   #Adressen kommer ifrån ditt Artifact Repo. "app_3-image" är namnet på imagen. 
   #'app_3/Dockerfile' anger vart i repot dockerfilen finns. 'app_3' anger från vilken mapp dockerfilen "läser" ifrån.
 - name: 'gcr.io/cloud-builders/docker'        
   args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/sentiment-analysis/img-4']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'get_data_bq', 
+  args: ['run', 'deploy', 'get_data_  bq', 
           '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/sentiment-analysis/img-4',
           '--platform', 'managed',
           '--region', 'europe-west1',
