--- a/get_data_bq/cloudbuild.yaml
+++ b/get_data_bq/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/sentiment-analysis/img-4', '-f', '/get_data_bq/dockerfile', 'get_data_bq']
+  args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/sentiment-analysis/img-4', '-f', 'get_data_bq/dockerfile', 'get_data_bq']
   #Adressen kommer ifrån ditt Artifact Repo. "app_3-image" är namnet på imagen. 
   #'app_3/Dockerfile' anger vart i repot dockerfilen finns. 'app_3' anger från vilken mapp dockerfilen "läser" ifrån.
 - name: 'gcr.io/cloud-builders/docker'        
@@ -22,3 +22,4 @@ steps:
 options:  
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
   logging: CLOUD_LOGGING_ONLY
+
