--- a/get_data_bq/cloudbuild.yaml
+++ b/get_data_bq/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'        
   args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/sentiment-analysis/img-4']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'get_data_bq', 
+  args: ['run', 'deploy', 'get-data-bq', 
           '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/sentiment-analysis/img-4',
           '--platform', 'managed',
           '--region', 'europe-west1',
