--- a/get_data_bq/dockerfile
+++ b/get_data_bq/dockerfile
@@ -1,15 +1,20 @@
+# Använd en officiell Python-bild som bas
+FROM python:3.9-slim
 
-FROM python:3.9-slim-buster
-
+# Ställ in arbetskatalogen i containern
 WORKDIR /get_data_bq
 
+# Kopiera requirements.txt till arbetskatalogen
+COPY req.txt .
+
+# Installera Python-biblioteken som behövs
+RUN pip install --no-cache-dir -r req.txt
+
+# Kopiera all kod till containern
 COPY . .
 
-COPY req.txt req.txt
-
-RUN pip install -r req.txt
-
+# Exponera port 8000 (samma som i din Flask-app)
 EXPOSE 8000
 
-
-CMD ["python", "sentiment.py"]
+# Starta Flask-applikationen
+CMD ["python", "main.py"]
