--- a/get_stocks/dockerfile
+++ b/get_stocks/dockerfile
@@ -1,15 +1,20 @@
-
+# Use the official Python image from the Docker Hub
 FROM python:3.9-slim
 
-WORKDIR /get_stocks
+# Set the working directory
+WORKDIR /app
 
+# Copy the requirements file into the container
+COPY requirements.txt .
+
+# Install the dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the rest of the application code into the container
 COPY . .
 
-COPY req.txt req.txt
-
-RUN pip install -r req.txt
-
+# Expose the port FastAPI will run on
 EXPOSE 8000
 
-
-CMD ["python", "set_stocks.py"]
+# Command to run the FastAPI application
+CMD ["uvicorn", "get_stocks:app", "--host", "0.0.0.0", "--port", "8000"]
