--- a/fetch_news/cloudbuild.yaml
+++ b/fetch_news/cloudbuild.yaml
@@ -10,7 +10,8 @@ steps:
           '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/fetch-raw-news/fetch-raw-news-img',
           '--platform', 'managed',
           '--region', 'europe-west1',
-          '--allow-unauthenticated']
+          '--allow-unauthenticated',
+          '--port','8000']
   # Add this line to pass the secret as an environment variable
   #env: ['GOOGLE_APPLICATION_CREDENTIALS=$_GOOGLE_APPLICATION_CREDENTIALS'] 
 
@@ -20,6 +21,6 @@ steps:
 #       GOOGLE_APPLICATION_CREDENTIALS: hardek00bigquerry # Replace with the actual name of your secret in Secret Manager
 
 options:  
-  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKETs
   logging: CLOUD_LOGGING_ONLY
 
