försöker hosta fetch_news i gcp

--- a/fetch_news/cloudbuild.yaml
+++ b/fetch_news/cloudbuild.yaml
@@ -23,3 +23,5 @@ options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
   logging: CLOUD_LOGGING_ONLY
 
+serviceAccount: 'service-accout-bigquery@tomastestproject-433206.iam.gserviceaccount.com'  # Replace with your actual Cloud Build service account
+
