--- a/transform_news/dockerfile
+++ b/transform_news/dockerfile
@@ -13,8 +13,6 @@ RUN pip install --no-cache-dir -r req.txt
 # Kopiera all kod till containern
 COPY . .
 
-# Exponera port 8000 (samma som i din Flask-app)
-EXPOSE 8000
 
-# Starta Flask-applikationen
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT}"]
