--- a/transform_news/dockerfile
+++ b/transform_news/dockerfile
@@ -13,6 +13,6 @@ RUN pip install --no-cache-dir -r req.txt
 # Kopiera all kod till containern
 COPY . .
 
+EXPOSE 8000
 
-
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT}"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
