--- a/transform_news/cloudbuild.yaml
+++ b/transform_news/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'europe-west1-docker.pkg.dev/tomastestproject-433206/clean-news/clean-news-img', '-f', 'transform_news/dockerfile', 'transform_news']
-  #Adressen kommer ifrån ditt Artifact Repo. "app_3-image" är namnet på imagen. 
-  #'app_3/Dockerfile' anger vart i repot dockerfilen finns. 'app_3' anger från vilken mapp dockerfilen "läser" ifrån.
+  # Adressen kommer ifrån ditt Artifact Repo. "clean-news-img" är namnet på imagen. 
+  # 'transform_news/Dockerfile' anger vart i repot dockerfilen finns. 'transform_news' anger från vilken mapp dockerfilen "läser" ifrån.
 - name: 'gcr.io/cloud-builders/docker'        
   args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/clean-news/clean-news-img']
 - name: 'gcr.io/cloud-builders/gcloud'
@@ -10,7 +10,8 @@ steps:
           '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/clean-news/clean-news-img',
           '--platform', 'managed',
           '--region', 'europe-west1',
-          '--allow-unauthenticated'
+          '--allow-unauthenticated',
+          '--set-env-vars', 'PORT=8000'  # Sätt porten här eller vilken port du vill använda
           ]
 
 options:  
