--- a/transform_news/dockerfile
+++ b/transform_news/dockerfile
@@ -13,6 +13,8 @@ RUN pip install --no-cache-dir -r req.txt
 # Kopiera all kod till containern
 COPY . .
 
+# Exponera samma port som du sätter i PORT
 EXPOSE 8000
 
+# Starta Flask-applikationen
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
