--- a/transform_news/cloudbuild.yaml
+++ b/transform_news/cloudbuild.yaml
@@ -4,12 +4,11 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'        
   args: ['push', 'europe-west1-docker.pkg.dev/tomastestproject-433206/clean-news/clean-news-img']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'clean-news', 
+  args: ['run', 'deploy', 'clean-news-app', 
           '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/clean-news/clean-news-img',
           '--platform', 'managed',
           '--region', 'europe-west1',
-          '--allow-unauthenticated'
-          ]
+          '--allow-unauthenticated']
 
 options:  
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
