--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /testv/
 transform_news/clean_news_notebook.ipynb
 fetch_news/app_3_notebook.ipynb
+transform_stocks/fetch_stocks_clean_daily.ipynb
+transform_stocks/get_stocks_clean.ipynb
+transform_stocks/get_stocks_clean.py
+test.ipynb
