--- a/transform_stocks/cloudbuild.yaml
+++ b/transform_stocks/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/fastapi-clean-stocks', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/fastapi-clean-stocks', '-f', 'transform_stocks/dockerfile', '.']
 
   # Step 2: Push the Docker image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
@@ -12,10 +12,10 @@ steps:
     entrypoint: 'gcloud'
     args: ['run', 'deploy', 'fastapi-clean-stocks', '--image', 'gcr.io/$PROJECT_ID/fastapi-clean-stocks', '--platform', 'managed', '--region', 'us-central1', '--allow-unauthenticated']
 
+images:
+  - 'gcr.io/$PROJECT_ID/fastapi-clean-stocks'
+
+
 options:  
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
   logging: CLOUD_LOGGING_ONLY
-
-
-images:
-  - 'gcr.io/$PROJECT_ID/fastapi-clean-stocks'
