la till några rader i gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /testv/
 transform_news/clean_news_notebook.ipynb
 fetch_news/app_3_notebook.ipynb
+test.ipynb
+transform_news_2/tomastestproject-433206-adc5bc090976.json
