--- a/transform_stocks/dockerfile
+++ b/transform_stocks/dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.9-slim
 
 # Set the working directory in the container
-WORKDIR /app
+WORKDIR /transform_stocks
 
 # Copy the requirements file into the container
 COPY req.txt .
