Adjusted fetch_stocks_raw_data.py and added new files

--- a/fetch_stocks_raw/.env
+++ b/fetch_stocks_raw/.env
@@ -1,2 +1,4 @@
-STOCK_API_KEY=DXWH7XXE9T31AX3K
-PROJECT_ID = tomastestproject-433206
+STOCK_API_KEY=1OYGVUULAM28CISW
+PROJECT_ID=tomastestproject-433206
+RAW_DATA_TABLE_ID=tomastestproject-433206.testdb_1.raw_stock_data
+CLEANED_DATA_TABLE_ID=tomastestproject-433206.testdb_1.clean_stock_data
