--- a/workflows/clean_news_ny.yaml
+++ b/workflows/clean_news_ny.yaml
@@ -18,4 +18,5 @@ main:
         result: service_response
 
     - return_result:
-        return: ${service_response.body}
+        return: 
+          - ${service_response.body}
