--- a/fetch_news/cloudbuild.yaml
+++ b/fetch_news/cloudbuild.yaml
@@ -9,8 +9,7 @@ steps:
   args: ['run', 'deploy', 'fetch-raw-news-app', 
           '--image', 'europe-west1-docker.pkg.dev/tomastestproject-433206/fetch-raw-news/fetch-raw-news-img',
           '--platform', 'managed',
-          '--region', 'europe-west1',
-          '--allow-unauthenticated']
+          '--region', 'europe-west1']
   # Add this line to pass the secret as an environment variable
   #env: ['GOOGLE_APPLICATION_CREDENTIALS=$_GOOGLE_APPLICATION_CREDENTIALS'] 
 
