finally finished product?

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ transform_stocks/fetch_stocks_clean_daily.ipynb
 transform_stocks/get_stocks_clean.ipynb
 transform_stocks/get_stocks_clean.py
 test.ipynb
+testing.ipynb
 
 
 
