--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,5 +2,6 @@
 exclude = [
     "transform_stocks/",
     "fetch_stocks_raw/",
-    "transform_news_2/"
+    "transform_news_2/",
+    "fetch_stocks_raw/"
 ]
