--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -3,10 +3,10 @@ name: Lint and Test
 on:
   push:
     branches:
-      - main
+      - mainss
   pull_request:
     branches:
-      - main
+      - mainss
 
 jobs:
   lint-and-test:
