--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -3,10 +3,10 @@ name: Lint and Test
 on:
   push:
     branches:
-      - mainss
+      - main
   pull_request:
     branches:
-      - mainss
+      - main
 
 jobs:
   lint-and-test:
