--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Run Ruff Linting
       run: |
-        ruff check . --config .pyproject.toml
+        ruff check . --config pyproject.toml
 
     - name: Run Tests
       run: |
