--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ exclude = ["transform_stocks/",
             "fetch_stocks_raw/main.ipynb",
             "fetch_stocks_raw/main.py",
             "transform_news_2/clean_news_notebook.ipynb",
-            
+            "transform_stocks/clean_stocks.py"
+
             ]
