--- a/fetch_stocks/dockerfile
+++ b/fetch_stocks/dockerfile
@@ -2,19 +2,19 @@
 FROM python:3.9-slim
 
 # Set the working directory in the container
-WORKDIR /fetch_stocks_raw
+WORKDIR /app
 
 # Copy the requirements file into the container
-COPY req.txt .
+COPY requirements.txt .
 
 # Install the dependencies
-RUN pip install --no-cache-dir -r req.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code into the container
 COPY . .
 
-# Expose the port that the app will run on
-EXPOSE 8080
+# Expose the port that the app runs on
+EXPOSE 8000
 
 # Command to run the application
-CMD ["uvicorn", "clean_stocks:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["uvicorn", "fetch_stocks_raw:app", "--host", "0.0.0.0", "--port", "8000"]
